--- a/blocks/inquiry-form/style.css
+++ b/blocks/inquiry-form/style.css
@@ -314,4 +314,9 @@
 	.po-inquiry__grid {
 		grid-template-columns: 1fr;
 	}
+	.po-inquiry__button {
+		min-width: 0;
+		width: 100%;
+		box-sizing: border-box;
+	}
 }
