--- a/blocks/member-form/style.css
+++ b/blocks/member-form/style.css
@@ -504,4 +504,9 @@
 	.po-memberform__modal-body {
 		padding: 1.5rem 1rem;
 	}
+	.po-memberform__button {
+		min-width: 0;
+		width: 100%;
+		box-sizing: border-box;
+	}
 }
